# pycasta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  download_examples.py  download_examples.txt  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py
.github/workflows/: publish.yml  python-publish.yml
docs/: config_parameters.md  reference_manual.md
examples/: example_analys.ipynb  pycasta_visualization_example.ipynb
src/data/: readme.md
src/examples/: pycasta_quickstart.ipynb
src/pycasta/: README.md  adaptive_alpha.py  all_python_files.txt  alpha_lab_step1.html  app.py  cgal_wdelaunay.py  evaluate_coach420.py  pocket_detection.py  results_analysis.py  run_analysis.py  run_test5.py  run_test_full.py  run_test_one.py  run_test_small.py  viewer.html
src/pycasta/data/bounded/: desktop.ini
src/pycasta/data/tables/: correspondence.xlsx
src/pycasta/results/bov1/: 148lE.alpha.npz  1a26A.alpha.npz  1a2kC.alpha.npz  1a4j_pockets.json  1a6u.alpha.npz  1a6u_pockets.json  1a6w.alpha.npz  1a6w_pockets.json  1acj.alpha.npz  1acj_pockets.json  1ahc.alpha.npz  1ahc_pockets.json  1apu.alpha.npz  1apu_pockets.json  1bbs.alpha.npz  1bbs_pockets.json  1bid.alpha.npz  1bid_pockets.json  1blh.alpha.npz  1blh_pockets.json  1brq.alpha.npz  1brq_pockets.json  1bya.alpha.npz  1bya_pockets.json  1byb.alpha.npz  1byb_pockets.json  1cdo.alpha.npz  1cdo_pockets.json  1cge.alpha.npz  1cge_pockets.json  1chg.alpha.npz  1chg_pockets.json  1djb.alpha.npz  1djb_pockets.json  1dwd.alpha.npz  1dwd_pockets.json  1esa.alpha.npz  1esa_pockets.json  (+157 more)
src/pycasta/utils/: data_utils.py
(+479 files in other folders)
