[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCASTa"
version = "0.1.0"
description = "PyCAST: Pocket detection and validation in proteins"
authors = [
    { name="Giorgio", email="giorgio@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "biopython",
    "scikit-learn",
    "tabulate",
    "plyfile",
    "trimesh",
    "openpyxl"
]

[project.scripts]
pycast-run = "pycast.run_analysis:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
